--- a/src/styles.css
+++ b/src/styles.css
@@ -8,17 +8,35 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+.welcome .row{
+  margin-top: 30px !important;
+}
+.row-cols-3 img {
+  display: block;
+  max-width: 100%;
+  height: 50%;
+  margin: 0 auto;
+}
+
+.container__title {
+  top: 0;
+  right: 0;
+  transform-origin: top right;
+  transform: translate(-50%, -50%) rotate(-270deg);
+  margin-left: -100px; 
+}
+
+
+.container__p{
+  margin-top: 10px;
+  text-align: center;
+  font-weight: bold;
+}
+
 .footer {
   text-align: center;
 }
 
 .footer a {
   text-decoration: none;
-}
-
-.row-cols-3 img {
-  display: block;
-  max-width: 100%;
-  height: 80%;
-  margin: 0 auto;
 }
