--- a/src/styles.css
+++ b/src/styles.css
@@ -22,9 +22,14 @@ h1 {
 }
 .row-cols-3 img {
   display: block;
-  max-width: 100%;
-  height: 50%;
+  max-width: 70%;
+  /* height: 50%; */
   margin: 0 auto;
+}
+
+.align-self-center {
+  margin-top: 150px !important;
+  height: 50% !important;
 }
 
 .container__title {
